[project]
name = "langhain-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "faiss-cpu==1.11.0",
    "langchain==0.3.25",
    "langchain-community==0.3.24",
    "openai==1.79.0",
    "sentence-transformers==4.1.0",
    "streamlit==1.45.1",
    "unstructured==0.17.2",
    "langchain-postgres",
    "langchain-text-splitters",
    "langchain-ollama"
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.0",
]
